Clean up a bunch of XML files.  Mostly reformating and removing empty tags, but also switched to button bar style for a number of buttons.

--- a/app/src/main/res/layout/dlgaddcomment.xml
+++ b/app/src/main/res/layout/dlgaddcomment.xml
@@ -22,8 +22,8 @@
 
     <ImageView
         android:id="@+id/imgPreview"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="160dip"
+        android:layout_height="120dip"
         android:contentDescription="@string/cdImagesForFlight" />
 
     <LinearLayout
@@ -34,16 +34,18 @@
 
         <Button
             android:id="@+id/btnCancel"
-            android:layout_width="wrap_content"
+            style="?android:attr/buttonBarStyle"
+            android:layout_weight="0.5"
+            android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:width="120dp"
             android:text="@string/lblCancel" />
 
         <Button
             android:id="@+id/btnOK"
-            android:layout_width="wrap_content"
+            style="?android:attr/buttonBarStyle"
+            android:layout_weight="0.5"
+            android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:width="120dp"
             android:text="@string/lblOK"
             android:textStyle="bold" />
     </LinearLayout>
