--- a/app/src/main/res/layout/newaircraft.xml
+++ b/app/src/main/res/layout/newaircraft.xml
@@ -110,11 +110,11 @@
             android:text="@string/lblAddMakes" />
         <!-- Images -->
         <TableLayout
+            android:id="@+id/tblImageTable"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@color/table_background"
             android:padding="4dp"
-            android:stretchColumns="0,1"
-            android:id="@+id/tblImageTable"/>
+            android:stretchColumns="0,1" />
     </LinearLayout>
 </ScrollView>
