--- a/app/src/main/res/layout/flightitem.xml
+++ b/app/src/main/res/layout/flightitem.xml
@@ -12,8 +12,7 @@
         android:layout_height="90dip"
         android:layout_gravity="top"
         android:contentDescription="@string/cdHasImages"
-        android:padding="4dip"
-        android:src="@drawable/camera" />
+        android:padding="4dip" />
 
     <LinearLayout
         android:layout_width="wrap_content"
