--- a/app/src/main/res/layout/grouprow.xml
+++ b/app/src/main/res/layout/grouprow.xml
@@ -3,13 +3,15 @@
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
     android:gravity="center_vertical"
-    android:padding="6dp"
-    android:orientation="horizontal" >
-    <TextView android:id="@+id/propertyGroup"
-        android:textSize="16dp"
-        android:textStyle="bold"
-		android:paddingLeft="50dp"
+    android:orientation="horizontal"
+    android:padding="6dp">
+
+    <TextView
+        android:id="@+id/propertyGroup"
+        android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:layout_width="fill_parent">
-    </TextView>
+        android:paddingStart="50dp"
+        android:paddingEnd="5dp"
+        android:textSize="16sp"
+        android:textStyle="bold" />
 </LinearLayout>
