--- a/app/src/main/res/layout/imageitem.xml
+++ b/app/src/main/res/layout/imageitem.xml
@@ -1,21 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
 <TableRow xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="horizontal" android:layout_width="match_parent"
-    android:clickable="true"
+    android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:clickable="true"
     android:gravity="center_vertical"
+    android:orientation="horizontal"
     android:padding="5dp">
 
     <ImageView
+        android:id="@+id/imageItemView"
         android:layout_width="120dip"
         android:layout_height="90dip"
-        android:contentDescription="@string/strEmpty"
-        android:id="@+id/imageItemView"/>
+        android:contentDescription="@string/strEmpty" />
 
     <TextView
-        android:text=""
+        android:id="@+id/imageItemComment"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/imageItemComment"
-        android:layout_weight="1" />
+        android:layout_weight="1"
+        android:text="" />
 </TableRow>
