--- a/app/src/main/res/layout/makemodelitem.xml
+++ b/app/src/main/res/layout/makemodelitem.xml
@@ -1,12 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/LinearLayout01"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
+    android:background="@color/table_background"
     android:orientation="horizontal"
-	android:id="@+id/LinearLayout01"
-	android:background="@color/table_background"
-	android:padding="10dp">
-	<TextView android:text="" android:id="@+id/txtDescription"
-		android:layout_width="wrap_content" android:layout_height="wrap_content">
-	</TextView>
+    android:padding="10dp">
+
+    <TextView
+        android:id="@+id/txtDescription"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="" />
 </LinearLayout>
