--- a/app/src/main/res/layout/recents.xml
+++ b/app/src/main/res/layout/recents.xml
@@ -1,7 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-  xmlns:android="http://schemas.android.com/apk/res/android"
-  android:layout_width="fill_parent"
-  android:layout_height="fill_parent">
-    <android.webkit.WebView android:layout_width="fill_parent" android:layout_height="fill_parent" android:id="@+id/webvwRecents"></android.webkit.WebView>
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent">
+
+    <android.webkit.WebView
+        android:id="@+id/webvwRecents"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent" />
 </LinearLayout>
