--- a/app/src/main/res/layout/recentsws.xml
+++ b/app/src/main/res/layout/recentsws.xml
@@ -1,13 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-  xmlns:android="http://schemas.android.com/apk/res/android"
-  android:layout_width="fill_parent"
-  android:orientation="vertical"
-  android:layout_height="fill_parent">
-	<TextView android:layout_width="fill_parent" android:padding="2sp"
-		android:layout_height="wrap_content" android:gravity="center_horizontal"
-	    android:id="@+id/txtFlightQueryStatus"></TextView>
-    <ListView android:id="@id/android:list" android:layout_height="fill_parent"
-    android:layout_width="fill_parent">
-    </ListView>
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
+    android:orientation="vertical">
+
+    <TextView
+        android:id="@+id/txtFlightQueryStatus"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center_horizontal"
+        android:padding="2sp" />
+
+    <ListView
+        android:id="@id/android:list"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent" />
 </LinearLayout>
