--- a/app/src/main/res/layout/totalsitem.xml
+++ b/app/src/main/res/layout/totalsitem.xml
@@ -8,14 +8,21 @@ xmlns:android="http://schemas.android.com/apk/res/android">
 		android:layout_width="0px" 
 		android:layout_weight="7"
 		android:orientation="vertical">
-		<TextView android:text="" android:id="@+id/txtTotDescription"
-			android:layout_width="wrap_content"  
+
+		<TextView
+			android:text=""
+			android:id="@+id/txtTotDescription"
+			android:layout_width="wrap_content"
 			android:layout_height="wrap_content"
-			android:textSize="6pt" android:textStyle="bold"></TextView>
-		<TextView android:text="" android:id="@+id/txtTotSubDescription"
-			android:layout_width="wrap_content" 
+			android:textSize="6pt"
+			android:textStyle="bold" />
+
+		<TextView
+			android:text=""
+			android:id="@+id/txtTotSubDescription"
+			android:layout_width="wrap_content"
 			android:layout_height="wrap_content"
-			android:textSize="6pt"></TextView>
+			android:textSize="6pt" />
 	</LinearLayout>
 	<TextView android:text="" android:id="@+id/txtTotValue"
 		android:layout_width="0px" android:layout_height="wrap_content"
