--- a/app/src/main/res/layout/totalslist.xml
+++ b/app/src/main/res/layout/totalslist.xml
@@ -1,11 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" android:orientation="vertical"
-	android:layout_width="fill_parent" android:layout_height="fill_parent">
-	<TextView android:layout_width="fill_parent" android:padding="2sp"
-		android:layout_height="wrap_content" android:gravity="center_horizontal"
-	    android:id="@+id/txtFlightQueryStatus"></TextView>
-	<ListView
-		android:id="@android:id/list" android:layout_width="fill_parent"
-		android:layout_height="wrap_content" android:background="@color/table_background">
-	</ListView>
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
+    android:orientation="vertical">
+
+    <TextView
+        android:id="@+id/txtFlightQueryStatus"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center_horizontal"
+        android:padding="2sp" />
+
+    <ListView
+        android:id="@android:id/list"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:background="@color/table_background" />
 </LinearLayout>
