--- a/app/src/main/res/layout/visitedairportitem.xml
+++ b/app/src/main/res/layout/visitedairportitem.xml
@@ -1,28 +1,46 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-	android:id="@+id/RelativeLayout01" android:layout_width="fill_parent"
-	android:background="@color/table_background"
-	android:orientation="vertical"
-	android:layout_height="wrap_content" android:padding="10dp">
-	<LinearLayout android:layout_width="fill_parent"
-	android:layout_height="wrap_content"
-	android:orientation="horizontal">
-		<TextView android:text="" android:id="@+id/txtCode"
-		    android:textStyle="bold"
-			android:layout_width="wrap_content" android:layout_height="wrap_content">
-		</TextView>	    	    
-		<TextView android:text="" android:id="@+id/txtName"
-			android:layout_width="wrap_content" android:layout_height="wrap_content">
-		</TextView>	    	    
-	</LinearLayout>
-	<LinearLayout android:layout_width="fill_parent"
-	android:layout_height="wrap_content"
-	android:orientation="horizontal">
-		<TextView android:text="" android:id="@+id/txtDistance"
-			android:layout_width="wrap_content" android:layout_height="wrap_content">
-		</TextView>
-		<TextView android:text="" android:id="@+id/txtVisits"
-			android:layout_width="wrap_content" android:layout_height="wrap_content">
-		</TextView>
-	</LinearLayout>
+    android:id="@+id/RelativeLayout01"
+    android:layout_width="fill_parent"
+    android:layout_height="wrap_content"
+    android:background="@color/table_background"
+    android:orientation="vertical"
+    android:padding="10dp">
+
+    <LinearLayout
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+
+        <TextView
+            android:id="@+id/txtCode"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text=""
+            android:textStyle="bold" />
+
+        <TextView
+            android:id="@+id/txtName"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+
+        <TextView
+            android:id="@+id/txtDistance"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="" />
+
+        <TextView
+            android:id="@+id/txtVisits"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="" />
+    </LinearLayout>
 </LinearLayout>
