--- a/app/src/main/res/menu/imagemenu.xml
+++ b/app/src/main/res/menu/imagemenu.xml
@@ -1,7 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu
-  xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:titleCondensed="@string/menuDeleteImageShort" android:showAsAction="ifRoom" android:icon="@drawable/ic_action_discard" android:title="@string/menuDeleteImage" android:id="@+id/menuDeleteImage"></item>
-    <item android:titleCondensed="@string/menuEditCommentShort" android:showAsAction="ifRoom" android:id="@+id/menuAddComment" android:title="@string/menuEditComment"></item>
-    <item android:titleCondensed="@string/menuViewImageShort" android:showAsAction="ifRoom" android:id="@+id/menuViewImage" android:title="@string/menuViewImage"></item>
+<menu xmlns:android="http://schemas.android.com/apk/res/android">
+    <item
+        android:id="@+id/menuDeleteImage"
+        android:icon="@drawable/ic_action_discard"
+        android:showAsAction="ifRoom"
+        android:title="@string/menuDeleteImage"
+        android:titleCondensed="@string/menuDeleteImageShort" />
+    <item
+        android:id="@+id/menuAddComment"
+        android:showAsAction="ifRoom"
+        android:title="@string/menuEditComment"
+        android:titleCondensed="@string/menuEditCommentShort" />
+    <item
+        android:id="@+id/menuViewImage"
+        android:showAsAction="ifRoom"
+        android:title="@string/menuViewImage"
+        android:titleCondensed="@string/menuViewImageShort" />
 </menu>
