--- a/app/src/main/res/menu/aircraftmenu.xml
+++ b/app/src/main/res/menu/aircraftmenu.xml
@@ -1,6 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu
-  xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:id="@+id/menuRefreshAircraft" android:titleCondensed="@string/menuRefreshAircraftShort" android:showAsAction="ifRoom" android:icon="@drawable/ic_action_refresh" android:title="@string/menuRefreshAircraft"></item>
-    <item android:id="@+id/menuNewAircraft" android:icon="@drawable/ic_action_new" android:titleCondensed="@string/menuAddAircraftShort" android:showAsAction="withText|always" android:title="@string/menuAddAircraft"></item>
+<menu xmlns:android="http://schemas.android.com/apk/res/android">
+    <item
+        android:id="@+id/menuRefreshAircraft"
+        android:icon="@drawable/ic_action_refresh"
+        android:showAsAction="ifRoom"
+        android:title="@string/menuRefreshAircraft"
+        android:titleCondensed="@string/menuRefreshAircraftShort" />
+    <item
+        android:id="@+id/menuNewAircraft"
+        android:icon="@drawable/ic_action_new"
+        android:showAsAction="withText|always"
+        android:title="@string/menuAddAircraft"
+        android:titleCondensed="@string/menuAddAircraftShort" />
 </menu>
