--- a/app/src/main/res/menu/currencymenu.xml
+++ b/app/src/main/res/menu/currencymenu.xml
@@ -1,4 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android" >
-    <item android:id="@+id/menuRefresh" android:title="@string/menuRefresh" android:showAsAction="ifRoom" android:icon="@drawable/ic_action_refresh" ></item>
+<menu xmlns:android="http://schemas.android.com/apk/res/android">
+    <item
+        android:id="@+id/menuRefresh"
+        android:icon="@drawable/ic_action_refresh"
+        android:showAsAction="ifRoom"
+        android:title="@string/menuRefresh" />
 </menu>
