--- a/app/src/main/res/menu/mfbexistingflightmenu.xml
+++ b/app/src/main/res/menu/mfbexistingflightmenu.xml
@@ -1,10 +1,34 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu
-  xmlns:android="http://schemas.android.com/apk/res/android">
-   	<item android:title="@string/menuDeleteFlight" android:id="@+id/btnDeleteFlight" android:showAsAction="ifRoom" android:icon="@drawable/ic_action_discard"></item>
-	<item android:title="@string/menuUpdateFlight" android:id="@+id/btnUpdateFlight" android:showAsAction="ifRoom"></item> 
-	<item android:id="@+id/menuTakePicture" android:titleCondensed="@string/menuTakePictureShort" android:showAsAction="ifRoom" android:icon="@drawable/ic_action_camera" android:title="@string/menuTakePicture"></item>
-	<item android:id="@+id/menuTakeVideo" android:titleCondensed="@string/menuTakeVideoShort" android:showAsAction="ifRoom" android:icon="@drawable/ic_action_video"  android:title="@string/menuTakeVideo"></item>
-	<item android:id="@+id/menuChoosePicture" android:titleCondensed="@string/menuChoosePictureShort" android:showAsAction="ifRoom" android:icon="@drawable/ic_action_picture" android:title="@string/menuChoosePicture"></item>
-    <item android:id="@+id/menuSignFlight" android:title="@string/menuSignFlight" android:showAsAction="always"></item>
+<menu xmlns:android="http://schemas.android.com/apk/res/android">
+    <item
+        android:id="@+id/btnDeleteFlight"
+        android:icon="@drawable/ic_action_discard"
+        android:showAsAction="ifRoom"
+        android:title="@string/menuDeleteFlight" />
+    <item
+        android:id="@+id/btnUpdateFlight"
+        android:showAsAction="ifRoom"
+        android:title="@string/menuUpdateFlight" />
+    <item
+        android:id="@+id/menuTakePicture"
+        android:icon="@drawable/ic_action_camera"
+        android:showAsAction="ifRoom"
+        android:title="@string/menuTakePicture"
+        android:titleCondensed="@string/menuTakePictureShort" />
+    <item
+        android:id="@+id/menuTakeVideo"
+        android:icon="@drawable/ic_action_video"
+        android:showAsAction="ifRoom"
+        android:title="@string/menuTakeVideo"
+        android:titleCondensed="@string/menuTakeVideoShort" />
+    <item
+        android:id="@+id/menuChoosePicture"
+        android:icon="@drawable/ic_action_picture"
+        android:showAsAction="ifRoom"
+        android:title="@string/menuChoosePicture"
+        android:titleCondensed="@string/menuChoosePictureShort" />
+    <item
+        android:id="@+id/menuSignFlight"
+        android:showAsAction="always"
+        android:title="@string/menuSignFlight" />
 </menu>
