--- a/app/src/main/res/menu/mfbpendingflightmenu.xml
+++ b/app/src/main/res/menu/mfbpendingflightmenu.xml
@@ -1,10 +1,37 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
-	<item android:titleCondensed="@string/menuDeleteFlightShort" android:showAsAction="ifRoom" android:icon="@drawable/ic_action_discard"
-		android:title="@string/menuDeleteFlight" android:id="@+id/btnDeleteFlight"></item>
-	<item android:title="@string/menuAddFlight" android:titleCondensed="@string/menuAddFlightShort" android:showAsAction="ifRoom" android:id="@+id/btnSubmitFlight"></item>
-	<item android:title="@string/menuSaveFlight" android:titleCondensed="@string/menuSaveFlightShort" android:showAsAction="ifRoom" android:id="@+id/menuUploadLater"></item>
-	<item android:id="@+id/menuTakePicture" android:titleCondensed="@string/menuTakePictureShort" android:showAsAction="ifRoom" android:icon="@drawable/ic_action_camera" android:title="@string/menuTakePicture"></item>
-	<item android:id="@+id/menuTakeVideo" android:titleCondensed="@string/menuTakeVideoShort" android:showAsAction="ifRoom" android:icon="@drawable/ic_action_video"  android:title="@string/menuTakeVideo"></item>
-	<item android:id="@+id/menuChoosePicture" android:titleCondensed="@string/menuChoosePictureShort" android:title="@string/menuChoosePicture" android:showAsAction="ifRoom" android:icon="@drawable/ic_action_picture"></item>
+    <item
+        android:id="@+id/btnDeleteFlight"
+        android:icon="@drawable/ic_action_discard"
+        android:showAsAction="ifRoom"
+        android:title="@string/menuDeleteFlight"
+        android:titleCondensed="@string/menuDeleteFlightShort" />
+    <item
+        android:id="@+id/btnSubmitFlight"
+        android:showAsAction="ifRoom"
+        android:title="@string/menuAddFlight"
+        android:titleCondensed="@string/menuAddFlightShort" />
+    <item
+        android:id="@+id/menuUploadLater"
+        android:showAsAction="ifRoom"
+        android:title="@string/menuSaveFlight"
+        android:titleCondensed="@string/menuSaveFlightShort" />
+    <item
+        android:id="@+id/menuTakePicture"
+        android:icon="@drawable/ic_action_camera"
+        android:showAsAction="ifRoom"
+        android:title="@string/menuTakePicture"
+        android:titleCondensed="@string/menuTakePictureShort" />
+    <item
+        android:id="@+id/menuTakeVideo"
+        android:icon="@drawable/ic_action_video"
+        android:showAsAction="ifRoom"
+        android:title="@string/menuTakeVideo"
+        android:titleCondensed="@string/menuTakeVideoShort" />
+    <item
+        android:id="@+id/menuChoosePicture"
+        android:icon="@drawable/ic_action_picture"
+        android:showAsAction="ifRoom"
+        android:title="@string/menuChoosePicture"
+        android:titleCondensed="@string/menuChoosePictureShort" />
 </menu>
