--- a/app/src/main/res/menu/newaircraft.xml
+++ b/app/src/main/res/menu/newaircraft.xml
@@ -1,6 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android" >
-    <item android:id="@+id/menuAddAircraft" android:showAsAction="always|withText" android:title="@string/lblBtnAddAircraft"></item>
-	<item android:id="@+id/menuTakePicture" android:showAsAction="ifRoom" android:icon="@drawable/ic_action_camera" android:titleCondensed="@string/menuTakePictureShort" android:title="@string/menuTakePicture"></item>
-	<item android:id="@+id/menuChoosePicture" android:showAsAction="ifRoom" android:icon="@drawable/ic_action_picture" android:titleCondensed="@string/menuChoosePictureShort" android:title="@string/menuChoosePicture"></item>
+<menu xmlns:android="http://schemas.android.com/apk/res/android">
+    <item
+        android:id="@+id/menuAddAircraft"
+        android:showAsAction="always|withText"
+        android:title="@string/lblBtnAddAircraft" />
+    <item
+        android:id="@+id/menuTakePicture"
+        android:icon="@drawable/ic_action_camera"
+        android:showAsAction="ifRoom"
+        android:title="@string/menuTakePicture"
+        android:titleCondensed="@string/menuTakePictureShort" />
+    <item
+        android:id="@+id/menuChoosePicture"
+        android:icon="@drawable/ic_action_picture"
+        android:showAsAction="ifRoom"
+        android:title="@string/menuChoosePicture"
+        android:titleCondensed="@string/menuChoosePictureShort" />
 </menu>
