--- a/app/src/main/res/menu/propertylistmenu.xml
+++ b/app/src/main/res/menu/propertylistmenu.xml
@@ -1,6 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu
-  xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:id="@+id/menuRefreshProperties" android:titleCondensed="@string/menuRefresh" android:showAsAction="ifRoom" android:icon="@drawable/ic_action_refresh" android:title="@string/menuRefresh"></item>
-    <item android:titleCondensed="@string/menuReturnToFlightShort" android:title="@string/menuReturnToFlight" android:id="@+id/menuBackToFlight"></item>
+<menu xmlns:android="http://schemas.android.com/apk/res/android">
+    <item
+        android:id="@+id/menuRefreshProperties"
+        android:icon="@drawable/ic_action_refresh"
+        android:showAsAction="ifRoom"
+        android:title="@string/menuRefresh"
+        android:titleCondensed="@string/menuRefresh" />
+    <item
+        android:id="@+id/menuBackToFlight"
+        android:title="@string/menuReturnToFlight"
+        android:titleCondensed="@string/menuReturnToFlightShort" />
 </menu>
