--- a/app/src/main/res/menu/recentsmenu.xml
+++ b/app/src/main/res/menu/recentsmenu.xml
@@ -1,7 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu
-  xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:id="@+id/menuRefreshRecents" android:titleCondensed="@string/menuRecentsRefresh" android:title="@string/menuRecentsRefresh"></item>
-    <item android:id="@+id/menuForward" android:titleCondensed="@string/menuRecentForward" android:title="@string/menuRecentForward"></item>
-    <item android:id="@+id/menuResetRecents" android:titleCondensed="@string/menuRecentStartOver" android:title="@string/menuRecentStartOver"></item>"
+<menu xmlns:android="http://schemas.android.com/apk/res/android" >
+    <item
+        android:id="@+id/menuRefreshRecents"
+        android:title="@string/menuRecentsRefresh"
+        android:titleCondensed="@string/menuRecentsRefresh" />
+    <item
+        android:id="@+id/menuForward"
+        android:title="@string/menuRecentForward"
+        android:titleCondensed="@string/menuRecentForward" />
+    <item
+        android:id="@+id/menuResetRecents"
+        android:title="@string/menuRecentStartOver"
+        android:titleCondensed="@string/menuRecentStartOver" />"
 </menu>
