--- a/app/src/main/res/menu/totalsmenu.xml
+++ b/app/src/main/res/menu/totalsmenu.xml
@@ -1,5 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android" >
-    <item android:id="@+id/menuRefresh" android:showAsAction="ifRoom" android:icon="@drawable/ic_action_refresh" android:title="@string/menuRefresh"></item>
-    <item android:title="@string/menuFlightSearch" android:showAsAction="ifRoom" android:icon="@drawable/ic_action_search" android:id="@+id/findFlights"></item>
+<menu xmlns:android="http://schemas.android.com/apk/res/android">
+    <item
+        android:id="@+id/menuRefresh"
+        android:icon="@drawable/ic_action_refresh"
+        android:showAsAction="ifRoom"
+        android:title="@string/menuRefresh" />
+    <item
+        android:id="@+id/findFlights"
+        android:icon="@drawable/ic_action_search"
+        android:showAsAction="ifRoom"
+        android:title="@string/menuFlightSearch" />
 </menu>
