--- a/app/src/main/res/layout/expandablelist.xml
+++ b/app/src/main/res/layout/expandablelist.xml
@@ -7,5 +7,5 @@
     <ExpandableListView
         android:id="@id/android:list"
         android:layout_width="fill_parent"
-        android:layout_height="fill_parent"></ExpandableListView>
+        android:layout_height="fill_parent" />
 </LinearLayout>
