--- a/app/src/main/res/layout/trainingitem.xml
+++ b/app/src/main/res/layout/trainingitem.xml
@@ -3,7 +3,7 @@
     android:id="@+id/txtTrainingItem"
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
-    android:drawableLeft="@drawable/trainingsel"
+    android:drawableStart="@drawable/trainingsel"
     android:drawablePadding="5dip"
     android:gravity="center_vertical"
     android:padding="5dip" />
