Yet more inspection issues.

--- a/app/src/main/res/menu/recentsmenu.xml
+++ b/app/src/main/res/menu/recentsmenu.xml
@@ -11,5 +11,5 @@
     <item
         android:id="@+id/menuResetRecents"
         android:title="@string/menuRecentStartOver"
-        android:titleCondensed="@string/menuRecentStartOver" />"
+        android:titleCondensed="@string/menuRecentStartOver" />
 </menu>
