--- a/app/src/main/res/drawable/ic_toggle_airport_bg.xml
+++ b/app/src/main/res/drawable/ic_toggle_airport_bg.xml
@@ -1,7 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?> 
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android"> 
-<item android:id="@+id/backgroundAirportToggle"
-      android:drawable="@android:color/transparent" /> 
-<item android:id="@+id/toggleAirportToggle"
-      android:drawable="@drawable/airport_toggle_group" /> 
+<item android:drawable="@android:color/transparent" />
+<item android:drawable="@drawable/airport_toggle_group" />
 </layer-list>
