--- a/app/src/main/res/layout/cptitem.xml
+++ b/app/src/main/res/layout/cptitem.xml
@@ -5,16 +5,16 @@
     android:orientation="vertical"
     android:padding="10dp">
 
-    <RelativeLayout
-        android:id="@+id/RelativeLayout01"
+    <LinearLayout
         android:layout_width="fill_parent"
         android:layout_height="wrap_content">
 
         <TextView
             android:id="@+id/txtName"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_alignParentStart="true"
+            android:layout_gravity="start"
+            android:layout_weight="1"
             android:text=""
             android:textStyle="bold" />
 
@@ -22,10 +22,10 @@
             android:id="@+id/txtValue"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignParentEnd="true"
+            android:layout_gravity="end"
             android:text=""
             android:textStyle="bold" />
-    </RelativeLayout>
+    </LinearLayout>
 
     <TextView
         android:id="@+id/txtCPTDescription"
