--- a/app/src/main/res/layout/totalsitem.xml
+++ b/app/src/main/res/layout/totalsitem.xml
@@ -3,7 +3,7 @@
 android:layout_height="wrap_content" 
 android:padding="5dp" 
 xmlns:android="http://schemas.android.com/apk/res/android">
-	<LinearLayout android:id="@+id/LinearLayout01" 
+	<LinearLayout
 		android:layout_height="wrap_content"
 		android:layout_width="0px" 
 		android:layout_weight="7"
